syntax = "proto3";

package onethirtyone;

option go_package = "pepega.dev/onethirtyone/waterloo";

message CacheSearch {
  string video_id = 1;  // Youtube Video ID
}

message CacheResult {
  string  id               = 1; // TrackID UUID
  string  title            = 2; // Video title
  string  channel          = 3; // Channel name
  bool    region_blocked   = 4; // Is region blocked for specified region
  bool    embed_blocked    = 5; // Is blocked for embedded players
  int64   duration         = 6; // Duration in seconds
  bool    found            = 7; // Found in cache
}

message CacheVideoDetails {
  string  id               = 1; // TrackID UUID
  string  title            = 2; // Video title
  string  channel          = 3; // Channel name
  bool    region_blocked   = 4; // Is region blocked for specified region
  bool    embed_blocked    = 5; // Is blocked for embedded players
  int64   duration         = 6; // Duration in seconds
}

message StoreStatus {
  bool  state = 1; // Status of storage
  int64 ttl   = 2; // Duration of key in redis
}

service PublicQueueCacheService {
  rpc lookup (CacheSearch) returns (CacheResult);
  rpc store (CacheVideoDetails) returns (StoreStatus);
}
